--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -141,7 +141,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_cross_section.png&amp;filetimestamp=20190712173911&amp;.html" class="mw-file-description"><img src="../File/Macro_cross_section.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_cross_section.html" title="Macro cross section/de">Makro Querschnitt</a></span>: Zeigt einen interaktiv verschiebbaren Querschnitt an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Delta_xyz.png&amp;filetimestamp=20190615151918&amp;.html" class="mw-file-description"><img src="../File/Macro_Delta_xyz.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Delta_xyz.html" title="Macro Delta xyz/de">Macro Delta xyz</a></span>: Gibt die Delta-Werte und den Abstand zwischen zwei Punkten an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Dump_Objects.png&amp;filetimestamp=20150116200045&amp;.html" class="mw-file-description"><img src="../File/Macro_Dump_Objects.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Dump_Objects.html" title="Macro Dump Objects/de">Makro Objekte auflisten</a></span>: Dieses Makro generiert eine Liste aller Objekte im aktuellen Dokument &ndash; die Liste kann in einem Fenster oder in der Berichtsansicht angezeigt werden.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FC_element_selector.png&amp;filetimestamp=20190612130043&amp;.html" class="mw-file-description"><img src="../File/Macro_FC_element_selector.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FC_element_selector.html" title="Macro FC element selector/de">Macro FC Element-W&auml;hler</a></span>: Dieses Makro zeigt alle Elemente unterhalb des Cursors an, &auml;hnlich wie das &bdquo;Makro Maus &uuml;ber verdeckten Elementen&rdquo; mit grafischer Benutzeroberfl&auml;che (auch Elemente, die von anderen Elementen verdeckt sind, werden angezeigt).</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FC_element_selector.png&amp;filetimestamp=20190612130043&amp;.html" class="mw-file-description"><img src="../File/Macro_FC_element_selector.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FC_element_selector.html" title="Macro FC element selector/de">Makro FC Element-W&auml;hler</a></span>: Dieses Makro zeigt alle Elemente unterhalb des Cursors an, &auml;hnlich wie das &bdquo;Makro Maus &uuml;ber verdeckten Elementen&rdquo; mit grafischer Benutzeroberfl&auml;che (auch Elemente, die von anderen Elementen verdeckt sind, werden angezeigt).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfo.png&amp;filetimestamp=20130913114658&amp;.html" class="mw-file-description"><img src="../File/FCInfo.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo.html" title="Macro FCInfo/de">Macro FC Information</a></span>: Liefert eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und kann eine Umrechnung von L&auml;nge, Neigung (Grad, Radiant, Grad), Form, Oberfl&auml;che, Volumen und Gewicht der Form in der ausgew&auml;hlten Dichte in verschiedenen internationalen und angels&auml;chsischen Einheiten anzeigen.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfoToolBar.png&amp;filetimestamp=20220217104352&amp;.html" class="mw-file-description"><img src="../File/FCInfoToolBar.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo_ToolBar.html" title="Macro FCInfo ToolBar/de">FCInfo Werkzeugleiste</a></span>: Zeigt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form als FCInfo in einer Mini-Symbolleiste an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FCInfoGlass.png&amp;filetimestamp=20150731105401&amp;.html" class="mw-file-description"><img src="../File/Macro_FCInfoGlass.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span> <a href="../de/Macro_FCInfoGlass.html" title="Macro FCInfoGlass/de">Makro FC Gl&auml;serne Information</a></span>: Gibt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und zeigt diese in 3D auf dem Bildschirm an.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200102
+Cached time: 20260113200121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.527 seconds
-Real time usage: 0.733 seconds
+CPU time usage: 0.446 seconds
+Real time usage: 0.830 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.481      1 -total
- 37.01%   18.683    219 Template:MacroLink
-  4.29%    2.166      1 Template:TOCright
-  3.53%    1.783      6 Template:MenuCommand
-  3.05%    1.542      1 Template:Version/de
-  2.49%    1.256      3 Template:Button
+100.00%   40.590      1 -total
+ 27.48%   11.155    219 Template:MacroLink
+ 19.04%    7.729      1 Template:TOCright
+ 13.82%    5.610      6 Template:MenuCommand
+  8.53%    3.463      1 Template:Version/de
+  8.28%    3.361      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200101 and revision id 1737986. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200120 and revision id 1737988. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
