--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -139,7 +139,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=CenterFace.png&amp;filetimestamp=20150129194823&amp;.html" class="mw-file-description"><img src="../File/CenterFace.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_CenterFace.html" title="Macro CenterFace/de">Makro Fl&auml;chenschwerpunkt</a></span>: Dieses Makro markiert den Fl&auml;chenschwerpunkt (Masse) rot (einstellbar) mit einem Punkt und zeigt die Koordinaten.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_CenterOfMass.png&amp;filetimestamp=20230907121238&amp;.html" class="mw-file-description"><img src="../File/Macro_CenterOfMass.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_CenterOfMass.html" title="Macro CenterOfMass/de">Makro Massenschwerpunkt</a></span>: Gibt die Gesamtmasse und den Schwerpunkt mehrerer ausgew&auml;hlter Objekte mit der gew&auml;hlten Dichte an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_cross_section.png&amp;filetimestamp=20190712173911&amp;.html" class="mw-file-description"><img src="../File/Macro_cross_section.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_cross_section.html" title="Macro cross section/de">Makro Querschnitt</a></span>: Zeigt einen interaktiv verschiebbaren Querschnitt an.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Delta_xyz.png&amp;filetimestamp=20190615151918&amp;.html" class="mw-file-description"><img src="../File/Macro_Delta_xyz.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Delta_xyz.html" title="Macro Delta xyz/de">Macro Delta xyz</a></span>: Gibt die Delta-Werte und den Abstand zwischen zwei Punkten an.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Delta_xyz.png&amp;filetimestamp=20190615151918&amp;.html" class="mw-file-description"><img src="../File/Macro_Delta_xyz.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Delta_xyz.html" title="Macro Delta xyz/de">Makro Delta xyz</a></span>: Gibt die Delta-Werte und den Abstand zwischen zwei Punkten an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Dump_Objects.png&amp;filetimestamp=20150116200045&amp;.html" class="mw-file-description"><img src="../File/Macro_Dump_Objects.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Dump_Objects.html" title="Macro Dump Objects/de">Makro Objekte auflisten</a></span>: Dieses Makro generiert eine Liste aller Objekte im aktuellen Dokument &ndash; die Liste kann in einem Fenster oder in der Berichtsansicht angezeigt werden.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FC_element_selector.png&amp;filetimestamp=20190612130043&amp;.html" class="mw-file-description"><img src="../File/Macro_FC_element_selector.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FC_element_selector.html" title="Macro FC element selector/de">Makro FC Element-W&auml;hler</a></span>: Dieses Makro zeigt alle Elemente unterhalb des Cursors an, &auml;hnlich wie das &bdquo;Makro Maus &uuml;ber verdeckten Elementen&rdquo; mit grafischer Benutzeroberfl&auml;che (auch Elemente, die von anderen Elementen verdeckt sind, werden angezeigt).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfo.png&amp;filetimestamp=20130913114658&amp;.html" class="mw-file-description"><img src="../File/FCInfo.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo.html" title="Macro FCInfo/de">Macro FC Information</a></span>: Liefert eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und kann eine Umrechnung von L&auml;nge, Neigung (Grad, Radiant, Grad), Form, Oberfl&auml;che, Volumen und Gewicht der Form in der ausgew&auml;hlten Dichte in verschiedenen internationalen und angels&auml;chsischen Einheiten anzeigen.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200138
+Cached time: 20260113200152
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.481 seconds
-Real time usage: 0.723 seconds
+CPU time usage: 0.409 seconds
+Real time usage: 0.481 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.528      1 -total
- 34.68%   15.788    219 Template:MacroLink
- 12.71%    5.786      1 Template:Version/de
-  9.38%    4.271      6 Template:MenuCommand
-  6.48%    2.948      1 Template:TOCright
-  6.31%    2.875      3 Template:Button
+100.00%   27.315      1 -total
+ 38.33%   10.469    219 Template:MacroLink
+ 10.29%    2.810      6 Template:MenuCommand
+  8.60%    2.350      1 Template:Version/de
+  4.12%    1.125      1 Template:TOCright
+  3.85%    1.051      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200138 and revision id 1737990. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200152 and revision id 1737992. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
