--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -142,7 +142,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Delta_xyz.png&amp;filetimestamp=20190615151918&amp;.html" class="mw-file-description"><img src="../File/Macro_Delta_xyz.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Delta_xyz.html" title="Macro Delta xyz/de">Makro Delta xyz</a></span>: Gibt die Delta-Werte und den Abstand zwischen zwei Punkten an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Dump_Objects.png&amp;filetimestamp=20150116200045&amp;.html" class="mw-file-description"><img src="../File/Macro_Dump_Objects.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Dump_Objects.html" title="Macro Dump Objects/de">Makro Objekte auflisten</a></span>: Dieses Makro generiert eine Liste aller Objekte im aktuellen Dokument &ndash; die Liste kann in einem Fenster oder in der Berichtsansicht angezeigt werden.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FC_element_selector.png&amp;filetimestamp=20190612130043&amp;.html" class="mw-file-description"><img src="../File/Macro_FC_element_selector.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FC_element_selector.html" title="Macro FC element selector/de">Makro FC Element-W&auml;hler</a></span>: Dieses Makro zeigt alle Elemente unterhalb des Cursors an, &auml;hnlich wie das &bdquo;Makro Maus &uuml;ber verdeckten Elementen&rdquo; mit grafischer Benutzeroberfl&auml;che (auch Elemente, die von anderen Elementen verdeckt sind, werden angezeigt).</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfo.png&amp;filetimestamp=20130913114658&amp;.html" class="mw-file-description"><img src="../File/FCInfo.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo.html" title="Macro FCInfo/de">Macro FC Information</a></span>: Liefert eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und kann eine Umrechnung von L&auml;nge, Neigung (Grad, Radiant, Grad), Form, Oberfl&auml;che, Volumen und Gewicht der Form in der ausgew&auml;hlten Dichte in verschiedenen internationalen und angels&auml;chsischen Einheiten anzeigen.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfo.png&amp;filetimestamp=20130913114658&amp;.html" class="mw-file-description"><img src="../File/FCInfo.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo.html" title="Macro FCInfo/de">Makro FC Information</a></span>: Liefert eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und kann eine Umrechnung von L&auml;nge, Neigung (Grad, Radiant, Grad), Form, Oberfl&auml;che, Volumen und Gewicht der Form in der ausgew&auml;hlten Dichte in verschiedenen internationalen und angels&auml;chsischen Einheiten anzeigen.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfoToolBar.png&amp;filetimestamp=20220217104352&amp;.html" class="mw-file-description"><img src="../File/FCInfoToolBar.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo_ToolBar.html" title="Macro FCInfo ToolBar/de">FCInfo Werkzeugleiste</a></span>: Zeigt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form als FCInfo in einer Mini-Symbolleiste an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FCInfoGlass.png&amp;filetimestamp=20150731105401&amp;.html" class="mw-file-description"><img src="../File/Macro_FCInfoGlass.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span> <a href="../de/Macro_FCInfoGlass.html" title="Macro FCInfoGlass/de">Makro FC Gl&auml;serne Information</a></span>: Gibt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und zeigt diese in 3D auf dem Bildschirm an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfoToMouse.png&amp;filetimestamp=20160101205625&amp;.html" class="mw-file-description"><img src="../File/FCInfoToMouse.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfoToMouse.html" title="Macro FCInfoToMouse/de">Makro FCInfo an Maus</a></span>: Liefert in Echtzeit Informationen zu Koordinaten, L&auml;ngen und Winkeln auf der Maus in einer Blasenbeschriftung, die auf dem 3D-Bildschirm angezeigt wird.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200152
+Cached time: 20260113200212
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.481 seconds
+CPU time usage: 0.512 seconds
+Real time usage: 0.636 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.315      1 -total
- 38.33%   10.469    219 Template:MacroLink
- 10.29%    2.810      6 Template:MenuCommand
-  8.60%    2.350      1 Template:Version/de
-  4.12%    1.125      1 Template:TOCright
-  3.85%    1.051      3 Template:Button
+100.00%   31.385      1 -total
+ 40.99%   12.865    219 Template:MacroLink
+  7.45%    2.337      6 Template:MenuCommand
+  7.23%    2.270      1 Template:Version/de
+  5.45%    1.710      1 Template:TOCright
+  3.38%    1.062      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200152 and revision id 1737992. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200211 and revision id 1737994. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
