--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -189,7 +189,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Circle.png&amp;filetimestamp=20190619091339&amp;.html" class="mw-file-description"><img src="../File/Macro_Circle.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Circle.html" title="Macro Circle/de">Makro Kreis</a></span>: Erstellt einen Kreis oder Bogen mit Radius, Durchmesser, Umfang, Fl&auml;che, Startwinkel, Endwinkel, Bogen, Winkelzentrum, Sehne, Pfeil, Mittelpunkt (Punkt) nach Wahl (wie oben ohne GUI).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_CirclePlus.png&amp;filetimestamp=20180710151007&amp;.html" class="mw-file-description"><img src="../File/Macro_CirclePlus.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_CirclePlus.html" title="Macro CirclePlus/de">Makro Kreis+</a></span>: Erstellt einen Kreis oder Bogen mit Radius, Durchmesser, Umfang, Fl&auml;che, Startwinkel, Endwinkel, Bogen, Winkelzentrum, Sehne, Pfeil, Mittelpunkt (Punkt) nach Wahl (wie unten, aber mit GUI) und erstellt zus&auml;tzlich einen Sektor und eine Fl&auml;che.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../File/CSV2Objects.png" class="mw-file-description"><img src="../File/CSV2Objects.png" decoding="async" width="24" height="26" class="mw-file-element" data-file-width="601" data-file-height="641"></a></span> <a href="../de/Macro_CSV2Objects.html" title="Macro CSV2Objects/de">Makro CSV2Objects</a></span>: Gro&szlig;e Mengen von 3D-Textobjekten aus CSV-Dateien erstellen, die auf Skizzenhilfslinien abgebildet sind.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Circle.png&amp;filetimestamp=20190619105234&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Circle.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Cut_Circle.html" title="Macro Cut Circle/de">Macro Kreis Schneiden</a></span>: Schneidet einen Kreis oder Bogen aus und erstellt x B&ouml;gen, wobei die Anzahl der Schnitte angeben werden kann.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Circle.png&amp;filetimestamp=20190619105234&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Circle.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Cut_Circle.html" title="Macro Cut Circle/de">Makro Kreis Schneiden</a></span>: Schneidet einen Kreis oder Bogen aus und erstellt x B&ouml;gen, wobei die Anzahl der Schnitte angeben werden kann.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Line.png&amp;filetimestamp=20190617135555&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Line.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Cut_Line.html" title="Macro Cut Line/de">Makro Linie Schneiden</a></span>: Eine Linie schneiden und x Punkte erstellen, die Anzahl der Punkte angeben, Linie erstellen oder nicht, Punkte erstellen oder nicht, zweifarbig erstellen oder nicht, je nach Wahl.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Cam-groover-icon-32x32.png&amp;filetimestamp=20180723224915&amp;.html" class="mw-file-description"><img src="../File/Cam-groover-icon-32x32.png" decoding="async" width="24" height="19" class="mw-file-element" data-file-width="40" data-file-height="32"></a></span> <a href="../de/Macro_FCCamGroover.html" title="Macro FCCamGroover/de">Makro FCCamNuter</a></span>: Erstellt einen gerillten Zylinder f&uuml;r die Nocke.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCCircularTextButtom.png&amp;filetimestamp=20150127103618&amp;.html" class="mw-file-description"><img src="../File/FCCircularTextButtom.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span> <a href="../de/Macro_FCCircularText.html" title="Macro FCCircularText/de">Makro FC Zirkul&auml;rer Text</a></span>: Dieses Makro erstellt einen Text um einen Zylinder herum..</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200229
+Cached time: 20260113200245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.464 seconds
-Real time usage: 0.561 seconds
+CPU time usage: 0.441 seconds
+Real time usage: 0.549 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.632      1 -total
- 32.48%   14.819    219 Template:MacroLink
- 23.66%   10.795      1 Template:Version/de
-  7.21%    3.292      6 Template:MenuCommand
-  4.18%    1.906      3 Template:Button
-  3.61%    1.649      1 Template:TOCright
+100.00%   31.257      1 -total
+ 41.82%   13.072    219 Template:MacroLink
+  9.36%    2.927      1 Template:Version/de
+  7.45%    2.329      3 Template:Button
+  6.82%    2.133      6 Template:MenuCommand
+  3.69%    1.153      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200228 and revision id 1737996. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200245 and revision id 1737998. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
