--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -209,7 +209,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCCreaLoft.png&amp;filetimestamp=20160207151812&amp;.html" class="mw-file-description"><img src="../File/FCCreaLoft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../de/Macro_Loft.html" title="Macro Loft/de">Makro Loft</a></span>: Erstellt ein Loft mit einer Liste von Linienz&uuml;gen (speziell erstellt f&uuml;r das <a href="../de/Macro_Texture.html" title="Macro Texture/de">Makro Textur</a>).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Place_Image.html" title="Macro Place Image/de">Macro Place Image</a></span>: Erzeugt eine  <a href="../de/Image_CreateImagePlane.html" title="Image CreateImagePlane/de">Image Bildebene</a> und richtet es an einem bestehenden <a href="../de/Draft_Rectangle.html" title="Draft Rectangle/de">Draft Rechteck</a> aus.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Points_to_Splines.html" title="Macro Points to Splines/de">Makro Punkte zu Splines</a></span>: Erstellt Splines aus Abschnitten von Punkt-Objekten.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Dodecahedron.svg&amp;filetimestamp=20200111132224&amp;.html" class="mw-file-description"><img src="../File/Dodecahedron.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="154" data-file-height="154"></a></span> <a href="../de/Macro_Polyhedrons.html" title="Macro Polyhedrons/de">Macro Polyeder</a></span>: Dieses Makro erstellt parametrische Polyeder (Dodekaeder, Ikosaeder, Tetraeder, ...). Anpassbar &uuml;ber Radius oder Seitenl&auml;nge.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Dodecahedron.svg&amp;filetimestamp=20200111132224&amp;.html" class="mw-file-description"><img src="../File/Dodecahedron.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="154" data-file-height="154"></a></span> <a href="../de/Macro_Polyhedrons.html" title="Macro Polyhedrons/de">Makro Polyeder</a></span>: Dieses Makro erstellt parametrische Polyeder (Dodekaeder, Ikosaeder, Tetraeder, ...). Anpassbar &uuml;ber Radius oder Seitenl&auml;nge.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Pyramidicon.svg&amp;filetimestamp=20191110125144&amp;.html" class="mw-file-description"><img src="../File/Pyramidicon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="230" data-file-height="233"></a></span> <a href="../de/Macro_Pyramid.html" title="Macro Pyramid/de">Makro Pyramide</a></span>: Dieses Makro erstellt eine parametrische Pyramide. Alle Parameter sind genau wie bei Part Kegel anpassbar.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_ReproWire.png&amp;filetimestamp=20151022084758&amp;.html" class="mw-file-description"><img src="../File/Macro_ReproWire.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Repro_Wire.html" title="Macro Repro Wire/de">Makro Linienzug kopieren</a></span>: Dieses Makro erstellt eine Kopie eines ausgew&auml;hlten Objekts oder Unterobjekts.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contours.png&amp;filetimestamp=20190704172250&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contours.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Site_From_Contours.html" title="Macro Site From Contours/de">Makro Grundst&uuml;ck aus Konturen</a></span>: Erstellt ein Arch Grundst&uuml;ck aus einer Reihe von Konturlinien.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200245
+Cached time: 20260113200300
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.441 seconds
-Real time usage: 0.549 seconds
+CPU time usage: 0.488 seconds
+Real time usage: 0.744 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.257      1 -total
- 41.82%   13.072    219 Template:MacroLink
-  9.36%    2.927      1 Template:Version/de
-  7.45%    2.329      3 Template:Button
-  6.82%    2.133      6 Template:MenuCommand
-  3.69%    1.153      1 Template:TOCright
+100.00%   59.948      1 -total
+ 34.15%   20.475    219 Template:MacroLink
+  7.80%    4.677      1 Template:Version/de
+  7.64%    4.578      6 Template:MenuCommand
+  3.44%    2.065      1 Template:TOCright
+  2.59%    1.555      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200245 and revision id 1737998. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200259 and revision id 1738000. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
