--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -207,7 +207,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Intersection_Icon.svg&amp;filetimestamp=20220227003623&amp;.html" class="mw-file-description"><img src="../File/Intersection_Icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="60" data-file-height="60"></a></span> <a href="../de/Macro_Intersection.html" title="Macro Intersection/de">Makro Schnitt</a></span>: Findet den Schnitt zwischen zwei oder drei ausgew&auml;hlten Kanten/Fl&auml;chen und funktioniert auch mit Bezugsebenen und Bezugslinien. Erstellt ein parametrisches Python-Objekt, das die Form des Schnitts enth&auml;lt.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Line_Length.png&amp;filetimestamp=20190702155619&amp;.html" class="mw-file-description"><img src="../File/Macro_Line_Length.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Line_Length.html" title="Macro Line Length/de">Makro Linienl&auml;nge</a></span>: Erstellen Sie eine Linie, die die Koordinaten XYZ, die L&auml;nge und den Winkel zur Ebene XY angibt.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCCreaLoft.png&amp;filetimestamp=20160207151812&amp;.html" class="mw-file-description"><img src="../File/FCCreaLoft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../de/Macro_Loft.html" title="Macro Loft/de">Makro Loft</a></span>: Erstellt ein Loft mit einer Liste von Linienz&uuml;gen (speziell erstellt f&uuml;r das <a href="../de/Macro_Texture.html" title="Macro Texture/de">Makro Textur</a>).</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Place_Image.html" title="Macro Place Image/de">Macro Place Image</a></span>: Erzeugt eine  <a href="../de/Image_CreateImagePlane.html" title="Image CreateImagePlane/de">Image Bildebene</a> und richtet es an einem bestehenden <a href="../de/Draft_Rectangle.html" title="Draft Rectangle/de">Draft Rechteck</a> aus.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Place_Image.html" title="Macro Place Image/de">Makro Bild platzieren</a></span>: Erzeugt eine  <a href="../de/Image_CreateImagePlane.html" title="Image CreateImagePlane/de">Image Bildebene</a> und richtet es an einem bestehenden <a href="../de/Draft_Rectangle.html" title="Draft Rectangle/de">Draft Rechteck</a> aus.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Points_to_Splines.html" title="Macro Points to Splines/de">Makro Punkte zu Splines</a></span>: Erstellt Splines aus Abschnitten von Punkt-Objekten.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Dodecahedron.svg&amp;filetimestamp=20200111132224&amp;.html" class="mw-file-description"><img src="../File/Dodecahedron.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="154" data-file-height="154"></a></span> <a href="../de/Macro_Polyhedrons.html" title="Macro Polyhedrons/de">Makro Polyeder</a></span>: Dieses Makro erstellt parametrische Polyeder (Dodekaeder, Ikosaeder, Tetraeder, ...). Anpassbar &uuml;ber Radius oder Seitenl&auml;nge.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Pyramidicon.svg&amp;filetimestamp=20191110125144&amp;.html" class="mw-file-description"><img src="../File/Pyramidicon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="230" data-file-height="233"></a></span> <a href="../de/Macro_Pyramid.html" title="Macro Pyramid/de">Makro Pyramide</a></span>: Dieses Makro erstellt eine parametrische Pyramide. Alle Parameter sind genau wie bei Part Kegel anpassbar.</li></ul>
@@ -416,15 +416,15 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200300
+Cached time: 20260113200342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.488 seconds
-Real time usage: 0.744 seconds
+CPU time usage: 0.479 seconds
+Real time usage: 0.590 seconds
 Preprocessor visited node count: 2862/1000000
-Post&#8208;expand include size: 28787/2097152 bytes
-Template argument size: 16107/2097152 bytes
+Post&#8208;expand include size: 28791/2097152 bytes
+Template argument size: 16111/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.948      1 -total
- 34.15%   20.475    219 Template:MacroLink
-  7.80%    4.677      1 Template:Version/de
-  7.64%    4.578      6 Template:MenuCommand
-  3.44%    2.065      1 Template:TOCright
-  2.59%    1.555      3 Template:Button
+100.00%   28.507      1 -total
+ 37.11%   10.578    219 Template:MacroLink
+ 10.71%    3.054      6 Template:MenuCommand
+  7.35%    2.095      1 Template:Version/de
+  7.21%    2.055      1 Template:TOCright
+  4.66%    1.329      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200259 and revision id 1738000. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200341 and revision id 1738002. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
